# QD

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt  bits.cpp  c_dd.cpp  c_qd.cpp  config.h.in  dd_const.cpp  dd_real.cpp  fpu.cpp  qd_const.cpp  qd_real.cpp
src/include/qd/: bits.h  dd_real.h  qd_config.h.in  qd_inline.h  qd_real.h
tests/: CMakeLists.txt  tictoc.cpp  tictoc.h
